--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- navbar -->
     <nav class="navbar fixed-top navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="/docs/4.4/assets/brand/bootstrap-solid.svg" width="30" height="30"
+            <img src="assets/icons/icons8-subway-64.png" width="30" height="30"
                 class="d-inline-block align-top" alt="">
             Train Scheduler
         </a>
@@ -88,22 +88,22 @@
                 <form>
                     <div class="form-group">
                       <label for="formGroupExampleInput">Train Name</label>
-                      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Big Bertha">
+                      <input type="text" class="form-control" id="train-name" placeholder="Big Bertha">
                     </div>
                     <div class="form-group">
                       <label for="formGroupExampleInput2">Destination</label>
-                      <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Atlantis">
+                      <input type="text" class="form-control" id="dest" placeholder="Atlantis">
                     </div>
                     <div class="form-group">
                         <label for="formGroupExampleInput">First Train Time (HH:mm - military time)</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="21:30">
+                        <input type="text" class="form-control" id="first-train" placeholder="21:30">
                       </div>
                       <div class="form-group">
                         <label for="formGroupExampleInput2">Frequency (min)</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="5">
+                        <input type="text" class="form-control" id="freq" placeholder="5">
                       </div>
                   </form>
-                <a href="#" class="btn btn-primary">Submit</a>
+                <a href="#" class="btn btn-primary" id="train-form-submit">Submit</a>
             </div>
         </div>
         <!-- end of container -->
@@ -113,6 +113,6 @@
 
 <!-- javascript -->
 
-<script src="assets/javascript/javascript.js"></script>
+<script src="assets/javascript/js.js"></script>
 
 </html>
