--- a/index.html
+++ b/index.html
@@ -40,83 +40,65 @@
         </a>
     </nav>
     <!-- start of container -->
-    <div class="container">
-        <!-- header -->
-        <div class="jumbotron jumbotron-fluid train-card">
-            <div class="container">
-                <h1 class="display-4">Train Scheduler</h1>
-                <p class="lead">Thomas the tank engine commin' town</p>
-            </div>
-        </div>
-        <!-- schedule output -->
-        <div class="card text train-card">
-            <div class="card-header">
-                Current Train Schedule
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">BART</h5>
-                <p class="card-text">Why are our trains always late</p>
-                <!-- table with data -->
-                <table class="table" id="train-table">
-                    <thead>
-                        <tr>
-                            <th scope="col">Train Name</th>
-                            <th scope="col">Destination</th>
-                            <th scope="col">Frequency(minutes)</th>
-                            <th scope="col">Next Arrival</th>
-                            <th scope="col">Minutes Away</th>
+    <div class="container bg-primary text-white py-3 mb-3" style="margin-top: 5%;">
+		<div class="row">
+		
+			<div class="col-lg col-md col-sm text-center pt-4">
+				<h1>Train Scheduler</h1>
+				<h4>Current Time: <span id="timer"></span></h4>
+			</div>
+		</div>
+	</div>
+	<div class="container px-0">
+		<div class="card mb-3">
+			<h5 class="card-header rounded-0 bg-primary text-white md-5">Current Train Schedule</h5>
+			<div class="card-body">
+			<table class="table table-hover" id="train-table">
+				<thead>
+					<tr>
+						<th scope="col">Delete</th>
+						<th scope="col">Train Name</th>
+						<th scope="col">Desitination</th>
+						<th scope="col">Frequency (min)</th>
+						<th scope="col">Next Arrival</th>
+                        <th scope="col">Minutes Away</th>
+                        
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+			</div>
+		</div>
+	</div>
+	<div class="container px-0">
+		<div class="card mb-3">
+			<h5 class="card-header  rounded-0 text-white bg-primary">Add New Train Information</h5>
+			<div class="card-body">
+				<form>
+					<div class="form-group">
+					<label for="trainname-input" class= "font-weight-bold">Train Name</label>
+					<input type="text" class="form-control" id="trainname-input" aria-describedby="emailHelp">
+					</div>
+					<div class="form-group">
+					<label for="destination-input" class= "font-weight-bold">Destination</label>
+					<input type="text" class="form-control" id="destination-input">
+					</div>
+					<div class="form-group">
+					<label for="firsttime-input" class= "font-weight-bold">First Train Time (HH:mm - military time)</label>
+					<input data-format=" hh:mm" type="text" class="form-control" id="firsttime-input">
+					</div>
+					<div class="form-group">
+					<label for="frequency-input" class= "font-weight-bold">Frequency (min)</label>
+					<input type="number" class="form-control" id="frequency-input">
+					</div>
+					<button type="submit" class="btn btn-primary rounded-0 " id="add-train">Submit</button>
+				</form>
+			</div>
+		</div>
+	</div>
 
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td id="train-name">Thomas the Tank Engine</td>
-                            <td id="class">Pallete Town</td>
-                            <td id="freq">2 minute</td>
-                            <td id="next-arrival">6:05 PM</td>
-                            <td id="mins-away">1</td>
-
-                        </tr>
-                    </tbody>
-                </table>
-                <!-- end of table -->
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-            <div class="card-footer text-muted">
-                Updated 2 mins ago
-            </div>
-        </div>
-        <!-- add train -->
-        <div class="card train-card">
-            <div class="card-header">
-                Add Train
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">Fill out form below</h5>
-                <p class="card-text">Contact IT department for support</p>
-                <form>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput">Train Name</label>
-                        <input type="text" class="form-control" id="train-name" placeholder="Big Bertha">
-                    </div>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">Destination</label>
-                        <input type="text" class="form-control" id="dest" placeholder="Atlantis">
-                    </div>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput">First Train Time (HH:mm - military time)</label>
-                        <input type="text" class="form-control" id="first-train" placeholder="21:30">
-                    </div>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">Frequency (min)</label>
-                        <input type="text" class="form-control" id="freq" placeholder="5">
-                    </div>
-                </form>
-                <a href="#" class="btn btn-primary" id="train-form-submit">Submit</a>
-            </div>
-        </div>
-        <!-- end of container -->
-    </div>
+   
 </body>
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
